# iota-rp2040-poc

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
cyw43/: upload.cmd  upload.sh
firmware/: Cargo.toml  build.rs  config.default.json
firmware/.cargo/: config.toml
firmware/src/: app_config.rs  handler.rs  main.rs  resources.rs  tx_builder.rs  wifi.rs
libs/: Cargo.toml
libs/src/: crypto.rs  encoding.rs  gas_station_client.rs  json_client.rs  lib.rs  transaction_types.rs
move/sensor_track/: Move.toml
move/sensor_track/sources/: main.move  temperature.move
move/sensor_track/tests/: sensor_track_tests.move
