[package]
name = "libs"
version = "0.1.0"
edition = "2024"

[features]
std = []
default = ["std"]
testing = ["std"]
defmt = []

[lib]

[dependencies]
hex = { version = "0.4", default-features = false, features = ["serde"] }
bs58 = { version = "0.5", default-features = false, features = [] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = [] }
blake2b_simd = { version = "1.0.3", default-features = false }
embedded-nal-async = { version = "0.8.0" }
reqwless = { version = "0.13.0" }
serde = { version = "1.0.203", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.6.0"
serde_with = { version = "3.14.0", default-features = false, features = ["base64", "hex"] }
heapless = { version = "0.9.1", features = ["serde"] }
defmt = { version = "1.0.1" }
base64 = { version = "0.22.1", default-features = false }
bcs = { git = "https://github.com/lmoe/bcs-no-std" }
serde_bytes = { version = "0.11.17", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true